--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -119,7 +119,7 @@
     "ax.set_aspect( (xlim[1] - xlim[0]) / (ylim[1] - ylim[0]) )    \n",
     "plt.show()\n",
     "\n",
-    "fig.savefig('demo.pdf', format = 'pdf', transparent=True)\n",
+    "fig.savefig('demo.png', format = 'png', transparent=True)\n",
     "\n"
    ]
   },
